--- a/src/main/resources/com/example/rupizzeria/chicago-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/chicago-view.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.rupizzeria.ChicagoView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="565.0" prefWidth="618.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.ChicagoController">
+   <children>
+      <Text layoutX="165.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chicago Style Pizza">
+         <font>
+            <Font name="Kristen ITC" size="30.0" />
+         </font>
+      </Text>
+      <ChoiceBox layoutX="40.0" layoutY="110.0" prefWidth="150.0" />
+      <RadioButton layoutX="40.0" layoutY="167.0" mnemonicParsing="false" text="Small" />
+      <RadioButton layoutX="106.0" layoutY="167.0" mnemonicParsing="false" text="Medium" />
+      <RadioButton layoutX="190.0" layoutY="167.0" mnemonicParsing="false" text="Large" />
+      <Text layoutX="37.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crust type:" />
+      <TextField layoutX="106.0" layoutY="204.0" />
+      <Text layoutX="39.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Toppings" />
+      <ListView layoutX="39.0" layoutY="293.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="295.0" layoutY="342.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button layoutX="295.0" layoutY="407.0" mnemonicParsing="false" text="&lt;&lt;" />
+      <Text layoutX="370.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Toppings" />
+      <ListView layoutX="370.0" layoutY="293.0" prefHeight="200.0" prefWidth="200.0" />
+      <Text layoutX="36.0" layoutY="521.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza Price:" />
+      <TextField layoutX="106.0" layoutY="504.0" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="328.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
