--- a/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.rupizzeria.CurrentordersView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="565.0" prefWidth="618.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.CurrentOrdersController">
+   <children>
+      <Text layoutX="163.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Shopping Cart">
+         <font>
+            <Font name="Kristen ITC" size="30.0" />
+         </font>
+      </Text>
+      <Text layoutX="28.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Order number:" />
+      <TextField layoutX="113.0" layoutY="102.0" />
+      <ListView layoutX="26.0" layoutY="135.0" prefHeight="268.0" prefWidth="566.0" />
+      <Text layoutX="28.0" layoutY="435.0" strokeType="OUTSIDE" strokeWidth="0.0" text="subtotal $" />
+      <TextField layoutX="81.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
+      <Text layoutX="435.0" layoutY="436.0" strokeType="OUTSIDE" strokeWidth="0.0" text="order total $" />
+      <TextField layoutX="507.0" layoutY="418.0" prefHeight="25.0" prefWidth="78.0" />
+      <Button layoutX="468.0" layoutY="473.0" mnemonicParsing="false" text="Place Order" />
+      <Text layoutX="225.0" layoutY="436.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sales Tax $" />
+      <TextField layoutX="292.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
+      <Button layoutX="54.0" layoutY="473.0" mnemonicParsing="false" text="Remove Pizza" />
+      <Button layoutX="254.0" layoutY="473.0" mnemonicParsing="false" text="Clear Order" />
+   </children>
 </AnchorPane>
