--- a/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.rupizzeria.OrdersplacedView"
+            fx:controller="com.example.rupizzeria.OrdersPlacedController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
