--- a/src/main/resources/com/example/rupizzeria/mainpage-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/mainpage-view.fxml
@@ -19,7 +19,7 @@
             <Font name="Algerian" size="12.0" />
          </font>
       </Text>
-      <Button layoutX="647.0" layoutY="32.0" mnemonicParsing="false" text="Menu">
+      <Button layoutX="647.0" layoutY="32.0" mnemonicParsing="false" text="Menu" onAction="#handleOpenMenuView">
          <font>
             <Font name="Algerian" size="15.0" />
          </font>
