--- a/src/main/resources/com/example/rupizzeria/newyork-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/newyork-view.fxml
@@ -18,7 +18,7 @@
             <Font name="Kristen ITC" size="30.0" />
          </font>
       </Text>
-      <ChoiceBox layoutX="45.0" layoutY="84.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="chooseType" layoutX="45.0" layoutY="84.0" prefWidth="150.0" />
       <RadioButton fx:id="small" layoutX="46.0" layoutY="142.0" mnemonicParsing="false" text="Small">
          <toggleGroup>
             <ToggleGroup fx:id="size" />
