--- a/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.rupizzeria.OrdersPlacedController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="560.0" prefWidth="600.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.OrdersPlacedController">
+   <children>
+      <TableView layoutX="16.0" layoutY="63.0" prefHeight="302.0" prefWidth="569.0">
+        <columns>
+          <TableColumn prefWidth="103.99997198581696" text="Order Number" />
+          <TableColumn prefWidth="106.66670989990234" text="Order Total" />
+            <TableColumn prefWidth="355.33331298828125" text="Pizzas" />
+        </columns>
+      </TableView>
+      <Text layoutX="193.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Orders Placed">
+         <font>
+            <Font name="Kristen ITC" size="30.0" />
+         </font>
+      </Text>
+      <Button layoutX="113.0" layoutY="520.0" mnemonicParsing="false" text="Browse" />
+      <Button layoutX="266.0" layoutY="520.0" mnemonicParsing="false" prefWidth="67.0" text="Export" />
+      <Button layoutX="436.0" layoutY="520.0" mnemonicParsing="false" text="Cancel" />
+      <TextArea layoutX="16.0" layoutY="378.0" prefHeight="135.0" prefWidth="569.0" />
+   </children>
 </AnchorPane>
