--- a/src/main/resources/com/example/rupizzeria/mainpage-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/mainpage-view.fxml
@@ -29,7 +29,7 @@
             <Image url="@../../../images/shoppingcart.jpg" />
          </image>
       </ImageView>
-      <Button layoutX="720.0" layoutY="32.0" mnemonicParsing="false" text="Orders Placed">
+      <Button layoutX="720.0" layoutY="32.0" mnemonicParsing="false" text="Orders Placed" onAction="#handleOpenOrdersPlacedView">
          <font>
             <Font name="Algerian" size="15.0" />
          </font>
