added makePizza() method to chicagocontroller

--- a/src/main/resources/com/example/rupizzeria/newyork-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/newyork-view.fxml
@@ -36,5 +36,6 @@
       <Text layoutX="42.0" layoutY="505.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza Price:" />
       <TextField layoutX="112.0" layoutY="488.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="334.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="434.0" layoutY="487.0" mnemonicParsing="false" text="Add to order" />
    </children>
 </AnchorPane>
