--- a/src/main/resources/com/example/rupizzeria/chicago-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/chicago-view.fxml
@@ -26,7 +26,7 @@
       <RadioButton fx:id="medium" layoutX="112.0" layoutY="148.0" mnemonicParsing="false" text="Medium" toggleGroup="$size" />
       <RadioButton fx:id="large" layoutX="195.0" layoutY="148.0" mnemonicParsing="false" text="Large" toggleGroup="$size" />
       <Text layoutX="43.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Crust type:" />
-      <TextField layoutX="112.0" layoutY="201.0" />
+      <TextField fx:id="crustTypeField" layoutX="112.0" layoutY="201.0" />
       <Text layoutX="45.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Toppings" />
       <ListView layoutX="45.0" layoutY="283.0" prefHeight="200.0" prefWidth="200.0" />
       <Button layoutX="301.0" layoutY="332.0" mnemonicParsing="false" text="&gt;&gt;" />
@@ -36,5 +36,6 @@
       <Text layoutX="42.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza Price:" />
       <TextField layoutX="112.0" layoutY="494.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="334.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="431.0" layoutY="494.0" mnemonicParsing="false" onAction="#onAddToOrderClick" text="Add to order" />
    </children>
 </AnchorPane>
