--- a/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="565.0" prefWidth="618.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.CurrentOrdersController">
    <children>
       <Text layoutX="163.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Shopping Cart">
@@ -16,13 +15,13 @@
          </font>
       </Text>
       <Text layoutX="28.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Order number:" />
-      <TextField layoutX="113.0" layoutY="102.0" />
-      <ListView layoutX="26.0" layoutY="135.0" prefHeight="268.0" prefWidth="566.0" />
+      <TextField fx:id="orderNumberField" layoutX="113.0" layoutY="102.0" />
+      <ListView fx:id="pizzaListView" layoutX="26.0" layoutY="135.0" prefHeight="268.0" prefWidth="566.0" />
       <Text layoutX="28.0" layoutY="435.0" strokeType="OUTSIDE" strokeWidth="0.0" text="subtotal $" />
       <TextField layoutX="81.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
       <Text layoutX="435.0" layoutY="436.0" strokeType="OUTSIDE" strokeWidth="0.0" text="order total $" />
       <TextField layoutX="507.0" layoutY="418.0" prefHeight="25.0" prefWidth="78.0" />
-      <Button layoutX="468.0" layoutY="473.0" mnemonicParsing="false" text="Place Order" />
+      <Button layoutX="468.0" layoutY="473.0" mnemonicParsing="false" text="Place Order" onAction = "#onPlaceOrderClick"/>
       <Text layoutX="225.0" layoutY="436.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sales Tax $" />
       <TextField layoutX="292.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
       <Button layoutX="54.0" layoutY="473.0" mnemonicParsing="false" text="Remove Pizza" />
