--- a/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="560.0" prefWidth="600.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.OrdersPlacedController">
    <children>
       <TableView layoutX="16.0" layoutY="63.0" prefHeight="302.0" prefWidth="569.0">
@@ -23,9 +22,9 @@
             <Font name="Kristen ITC" size="30.0" />
          </font>
       </Text>
-      <Button layoutX="113.0" layoutY="520.0" mnemonicParsing="false" text="Browse" />
-      <Button layoutX="266.0" layoutY="520.0" mnemonicParsing="false" prefWidth="67.0" text="Export" />
-      <Button layoutX="436.0" layoutY="520.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="browseButton" layoutX="113.0" layoutY="520.0" mnemonicParsing="false" text="Browse" />
+      <Button fx:id="exportButton" layoutX="266.0" layoutY="520.0" mnemonicParsing="false" prefWidth="67.0" text="Export" />
+      <Button fx:id="cancelButton" layoutX="436.0" layoutY="520.0" mnemonicParsing="false" text="Cancel" />
       <TextArea layoutX="16.0" layoutY="378.0" prefHeight="135.0" prefWidth="569.0" />
    </children>
 </AnchorPane>
