--- a/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -26,5 +29,11 @@
       <Button fx:id="exportButton" layoutX="266.0" layoutY="520.0" mnemonicParsing="false" prefWidth="67.0" text="Export" />
       <Button fx:id="cancelButton" layoutX="436.0" layoutY="520.0" mnemonicParsing="false" text="Cancel" />
       <TextArea layoutX="16.0" layoutY="378.0" prefHeight="135.0" prefWidth="569.0" />
+      <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="545.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
+      <ImageView fx:id="homeButton" fitHeight="41.0" fitWidth="41.0" layoutX="545.0" layoutY="14.0" onMousePressed="#handleHomeButtonClick" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/homeButton_processed.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
