--- a/src/main/resources/com/example/rupizzeria/chicago-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/chicago-view.fxml
@@ -6,13 +6,16 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="565.0" prefWidth="618.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.ChicagoController">
    <children>
+      <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="553.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
       <Text layoutX="165.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chicago Style Pizza">
          <font>
             <Font name="Kristen ITC" size="30.0" />
@@ -34,8 +37,13 @@
       <Text layoutX="376.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Toppings" />
       <ListView fx:id="selectedToppings" layoutX="376.0" layoutY="283.0" prefHeight="200.0" prefWidth="200.0" />
       <Text layoutX="42.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza Price:" />
-      <TextField layoutX="112.0" layoutY="494.0" />
+      <TextField fx:id="price" layoutX="112.0" layoutY="494.0" />
       <ImageView fx:id="dynamicImage" fitHeight="150.0" fitWidth="200.0" layoutX="373.0" layoutY="82.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="addToOrderButton" layoutX="431.0" layoutY="494.0" mnemonicParsing="false" onAction="#onAddToOrderClick" text="Add to order" />
+      <ImageView fx:id="homeButton" fitHeight="54.0" fitWidth="51.0" layoutX="548.0" layoutY="17.0" onMouseClicked="#handleHomeButtonClick" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/homeButton_processed.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
