--- a/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/currentorders-view.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -26,5 +29,11 @@
       <TextField layoutX="292.0" layoutY="419.0" prefHeight="25.0" prefWidth="78.0" />
       <Button fx:id="removePizzaButton" layoutX="54.0" layoutY="473.0" mnemonicParsing="false" text="Remove Pizza" />
       <Button fx:id="clearOrderButton" layoutX="254.0" layoutY="473.0" mnemonicParsing="false" text="Clear Order" />
+      <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="565.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
+      <ImageView fx:id="homeButton" fitHeight="52.0" fitWidth="53.0" layoutX="559.0" layoutY="9.0" onMousePressed="#handleHomeButtonClick" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/homeButton_processed.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
