--- a/src/main/resources/com/example/rupizzeria/menu-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/menu-view.fxml
@@ -3,13 +3,19 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="778.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="778.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.MenuController">
    <children>
       <ImageView fitHeight="778.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/RUPizzeriaMenu.png" />
+         </image>
+      </ImageView>
+      <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="14.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
+      <ImageView fx:id="homeButton" fitHeight="41.0" fitWidth="41.0" layoutX="14.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true" onMousePressed="#handleHomeButtonClick">
+         <image>
+            <Image url="@../../../images/homeButton_processed.jpg" />
          </image>
       </ImageView>
    </children>
