--- a/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
+++ b/src/main/resources/com/example/rupizzeria/ordersplaced-view.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane prefHeight="560.0" prefWidth="600.0" style="-fx-background-color: ebe7df;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.rupizzeria.OrdersPlacedController">
    <children>
-      <TableView layoutX="16.0" layoutY="63.0" prefHeight="302.0" prefWidth="569.0">
+      <TableView fx:id="ordersTable" layoutX="16.0" layoutY="63.0" prefHeight="302.0" prefWidth="569.0">
         <columns>
           <TableColumn prefWidth="103.99997198581696" text="Order Number" />
           <TableColumn prefWidth="106.66670989990234" text="Order Total" />
@@ -25,9 +25,9 @@
             <Font name="Kristen ITC" size="30.0" />
          </font>
       </Text>
-      <Button fx:id="browseButton" layoutX="113.0" layoutY="520.0" mnemonicParsing="false" text="Browse" />
-      <Button fx:id="exportButton" layoutX="266.0" layoutY="520.0" mnemonicParsing="false" prefWidth="67.0" text="Export" />
-      <Button fx:id="cancelButton" layoutX="436.0" layoutY="520.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="browseButton" layoutX="113.0" layoutY="520.0" mnemonicParsing="false" onAction="#handleBrowseButtonClick" text="Browse" />
+      <Button fx:id="exportButton" layoutX="266.0" layoutY="520.0" mnemonicParsing="false" onAction="#handleExportClick" prefWidth="67.0" text="Export" />
+      <Button fx:id="cancelButton" layoutX="436.0" layoutY="520.0" mnemonicParsing="false" onAction="#handleCancelClick" text="Cancel" />
       <TextArea layoutX="16.0" layoutY="378.0" prefHeight="135.0" prefWidth="569.0" />
       <Rectangle fx:id="homeButtonRec" arcHeight="5.0" arcWidth="5.0" fill="#d6b0b0" height="41.0" layoutX="545.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="41.0" />
       <ImageView fx:id="homeButton" fitHeight="41.0" fitWidth="41.0" layoutX="545.0" layoutY="14.0" onMousePressed="#handleHomeButtonClick" pickOnBounds="true" preserveRatio="true">
